# Nibble-Launcher

./: .gitignore  .gitmodules  ByteBoi.ino  ByteBoy.ino  CMakeLists.txt  GameInfo.hpp  Makefile  Makefile.win  Nibble-Launcher.ino  Nibble.ino  README.md
src/: BatteryService.cpp  BatteryService.h  ByteBoi.hpp  ByteBoy.cpp  ByteBoy.hpp  GameScroller.cpp  GameScroller.h  HardwareTest.cpp  HardwareTest.h  Launcher.cpp  Launcher.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  Nibble.hpp  SerialID.cpp  SerialID.h  Splash.cpp  Splash.h
src/BatteryService/: BatteryService.cpp  BatteryService.h
src/Bitmaps/: battery.hpp  logo.hpp  settingsIcon.aseprite  settingsIcon.hpp  settingsIcon2.aseprite
src/Elements/: GameImage.cpp  GameImage.h  GameTitle.cpp  GameTitle.h  Logo.cpp  Logo.h  Switch.cpp  Switch.h
src/Invaderz/: SpaceInvaders.cpp  SpaceInvaders.h  Star.cpp  Star.h  icon.h  sprites.hpp
src/Services/: BatteryService.cpp  BatteryService.h  SleepService.cpp  SleepService.h
src/SettingsMenu/: GameInfo.hpp  Setting.hpp  SettingStruct.hpp  SettingsMenu.cpp  SettingsMenu.h  SettingsStruct.cpp  SettingsStruct.hpp
src/SettingsMenu/Elements/: BoolSettingElement.cpp  BoolSettingElement.h  NumericSettingElement.cpp  NumericSettingElement.h  SettingElement.cpp  SettingElement.h
src/SleepService/: SleepService.cpp  SleepService.h
